
 * Fixed and simplified Proplist iteration
    - Fixed infinite loop bug: I mis-read the documentation, it's the return value from the C
      function call that will be NULL when it reaches the end of the list, not the state variable.
    - Fixed infinite loop bug #2: The state tracking variable used for the underlying C function
      cannot be hidden within the iterate function, it causes an infinite loop whereby the function
      always just returns the first entry wrapped in `Some`. I don't know wtf I was thinking.
    - Implemented proper iterator symantics. The `iterate` method was renamed `iter` and now returns
      an actual Rust Iterator object, which makes iterating much more simple and tidy.
 * CVolume: make self for is_[muted|norm] immutable

 [pulse-simple-binding] (1.0.2 => ???)

 * Enabled pulse-simple doc test

Changes between 1.0.3 and 1.0.4d:
---------------

(no crate version changes, project only)

 * Use explicit test script for Travis, rather than relying on default, to ensure that the `--all`
   flag is passed to `cargo test`, which I thought was already done, but seems not from the logs and
   thus tests were not actually being done.
 * Fix Travis failures - add missing libpulse-mainloop-glib0 dependency to test environment.
 * Properly fix Travis tests - add pulseaudio dependency and get it started in test environment.

Changes between 1.0.2 and 1.0.3:
---------------

 [pulse-binding] (1.0.2 => 1.0.3)

 * Added `From` methods for transmuting between certain introspection structs and their `sys`
   counterparts. (They are identical, and only duplicated in the binding to add documentation).

Changes between 1.0.1 and 1.0.2:
---------------

 * Added travis badge to individual crates

Changes between 1.0.0 and 1.0.1:
---------------

 * Fixed toml file license string "LGPL-2.1" => "LGPL-2.1+"
 * Fixed toml file missing author email address
 * Removed obsolete readme doc links

Version 1.0:
---------------

 * Original release